--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <div id="stat">
           <div>
             <h2>10k+</h2>
-            <p class="stats">companies</p>
+            <p>companies</p>
           </div>
           <div>
             <h2>314</h2>
-            <p class="stats">templates</p>
+            <p>templates</p>
           </div>
           <div>
-            <h2>12m+</h2>
-            <p class="stats">queries</p>
+            <h2>12M+</h2>
+            <p>queries</p>
           </div>
         </div>
       </div>
@@ -35,7 +35,12 @@
           <div id="purple"></div>
       </div>
     </section>
+    <footer>
+            Challenge by 
+            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by 
+            <a href="https://github.com/TanayD304" target="_blank">Tanay Dubey</a>.
+    </footer>
   </body>
 </html>
 
-<!-- <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div> -->
+>
